Improve step1 so that it will pass validation
