# python/step1/main.py
@@ -5,17 +5,44 @@ Front end of Individual/Variant/Call API example
 """
 import datetime
 import logging
-
+import sys
 import connexion
+import yaml
 from connexion import NoContent
+from bravado_core.spec import Spec
 
+#
+# Read in the API definition, and parse it with Bravado
+#
+SPEC_DICT = yaml.safe_load(open('swagger.yaml', 'r'))
+SWAGGER_SPEC = Spec.from_dict(SPEC_DICT, config={'use_models': True})
+
+#
+# Generate the Python API models from the spec
+#
+Individual = SWAGGER_SPEC.definitions['Individual']  # pylint:disable=invalid-name
+Variant = SWAGGER_SPEC.definitions['Variant']  # pylint:disable=invalid-name
+Call = SWAGGER_SPEC.definitions['Call']  # pylint:disable=invalid-name
+
+#
+# examples
+#
+test_individual = Individual(id=1, description='Patient Zero',
+                             created=datetime.datetime.now())
+
+test_variant = Variant(id=1, chromosome='chr1', start=14370,
+                       ref='G', alt='A', description='rs6054257',
+                       created=datetime.datetime.now())
+
+test_call = Call(id=1, variant_id=1, individual_id=1,
+                 genotype='0/1', format='GQ:DP:HQ 48:1:51,51',
+                 created=datetime.datetime.now())
 
 def get_variants(chromosome, start, end):
     """
     Return all variants between [chrom, start) and (chrom, end]
     """
-    print("get_variants", chromosome, start, end)
-    return NoContent, 200
+    return [test_variant], 200
 
 
 def get_individuals():
@@ -23,7 +50,7 @@ def get_individuals():
     Return all individuals
     """
     print("get_individuals")
-    return NoContent, 200
+    return [test_individual], 200
 
 
 def get_calls():
@@ -31,33 +58,30 @@ def get_calls():
     Return all calls
     """
     print("get_calls")
-    return NoContent, 200
+    return [test_call], 200
 
 
-def put_variant(variant):
+def post_variant(variant):
     """
     Add a new variant
     """
-    print("Supposed to be putting variant in: ")
-    print(variant)
+    print('Got variant:', variant, file=sys.stderr)
     return NoContent, 201
 
 
-def put_individual(individual):
+def post_individual(individual):
     """
     Add a new individual
     """
-    print("Supposed to be putting individual  in: ")
-    print(individual)
+    print('Got individual:', individual, file=sys.stderr)
     return NoContent, 201
 
 
-def put_call(call):
+def post_call(call):
     """
     Add a new call
     """
-    print("Supposed to be putting call  in: ")
-    print(call)
+    print('Got call:', call, file=sys.stderr)
     return NoContent, 201
 
 
